--- a/.github/workflows/build-from-private.yml
+++ b/.github/workflows/build-from-private.yml
@@ -68,6 +68,7 @@ jobs:
           CARGO_TARGET_DIR: ${{ github.workspace }}/cargo-target
           CI_ARTIFACT_DIR: ${{ github.workspace }}/ci_artifacts
           CI_RUN_UI_E2E: "1"
+          DUAL_NBACK_CI_E2E: "1"
           LIBGL_ALWAYS_SOFTWARE: "1"
           WGPU_BACKEND: gl
         run: |
