Install fonts-noto-cjk for readable Chinese screenshots

--- a/.github/workflows/build-from-private.yml
+++ b/.github/workflows/build-from-private.yml
@@ -60,6 +60,7 @@ jobs:
             jq \
             libxkbcommon-x11-0 \
             libxkbcommon-x11-dev
+            fonts-noto-cjk
 
       - name: Build + test + UI e2e (from private repo script)
         shell: bash
