--- a/.github/workflows/build-from-private.yml
+++ b/.github/workflows/build-from-private.yml
@@ -59,7 +59,7 @@ jobs:
             pkg-config \
             jq \
             libxkbcommon-x11-0 \
-            libxkbcommon-x11-dev
+            libxkbcommon-x11-dev \
             fonts-noto-cjk
 
       - name: Build + test + UI e2e (from private repo script)
